--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,152 +1,23 @@
 @import "~bootstrap/scss/bootstrap";
 
 
-html,
-body {
-  background-color: #f5f5f5;
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import "./main.scss";
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@import "./flexStyles.scss";
 
-* {
-  box-sizing: border-box;
-}
+@import "./DOMElements.scss";
 
-.flexColumn {
-  display: flex;
-  flex-direction: column;
-}
+@import "./projects.scss";
 
-.flex {
-  display: flex;
-}
 
-.flexRow {
-  display: flex;
-  flex-direction: row;
-}
 
-.relative {
-  position: relative;
-}
 
-ul {
-  list-style: none;
 
-  li {
-    padding: 5px;
-    background-color: rgb(133, 127, 127);
-    color: white;
-    margin: 5px;
-  }
-}
 
-.main {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
 
-  .navContainer{
-    align-items: center;
-    justify-content: center;
-    background-color: #040303;
 
-    .navBar{
-      align-items: center;
-      justify-content: stretch;
 
-      .logo{
-        color: white;
-      }
-    }
-  }
 
-  .intro {
-    align-items: center;
-    margin: 30px;
-    padding: 30px;
-    h1 {
-      margin: 10px;
-    }
-    p {
-      margin: 20px;
-    }
-  }
-  .info{
-    justify-content: center;
-    align-items: center;
-    .projectContainer{
-      .cardShadow{
-        margin: 10px;
-        padding: 10px;
-        background-color: hsl(0, 0%, 96%);
-        box-shadow: 20px 20px 35px #d0d0d0,
-        -20px -20px 35px #ffffff;
-      }
-    }
-  }
-
-  .thecContainer {
-    margin: 30px;
-    .item {
-      border: solid #d0d0d0;
-      margin: 25px;
-      position: relative;
-      transition: .5s;
-      cursor: pointer;
-      p {
-        margin: 10px;
-        padding: 11px;
-        align-self: center;
-        cursor: pointer;
-      }
-    }
-    .item:hover {
-      box-shadow: 0px 20px 40px #d0d0d0;
-      transform: scale(1.05,1.05);
-    }
-    .item1 {
-      top: 20px;
-    }
-
-    .item2 {
-      top: 40px;
-    }
-
-    .item3 {
-      top: 60px
-    }
-
-    .itemT1 {
-      bottom: -60px;
-    }
-
-    .itemT2 {
-      bottom: -40px;
-    }
-
-    .itemT3 {
-      bottom: -20px;
-    }
-  }
-
-  .footer {
-    margin: 50px;
-    justify-content: space-around;
-    div {
-      margin: 30px;
-      padding: 15px; 
-    }
-  }
-}
 
 
 
